--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             </div>
         </div>
     </div>
+    <button class="btn-print" onclick="printPage()">Download</button>
     
     <script>
         function calculateTotal() {
@@ -162,6 +163,10 @@
                 reader.readAsDataURL(file);
             }
         });
+         // Fungsi untuk print halaman
+        function printPage() {
+            window.print();
+        }
     </script>
 </body>
 </html>
