--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         
         <div class="right">
             <div class="recipe">
+            <label>Nama Penerima Event:</label>
+            <input type="text" placeholder="Nama Penerima Event">
+                
             <label>Nama PIC:</label>
             <input type="text" placeholder="Nama PIC">
 
@@ -105,12 +108,6 @@
     <div class="container">
         <h3>Tanda Tangan</h3>
         <div class="signature-container">
-            <div class="signature-box">
-                <label>Penerima Event</label>
-                <input type="text" placeholder="Nama">
-                <br><br>
-                <input type="text" placeholder="Tanda Tangan">
-            </div>
             <div class="signature-box">
                 <label>Kitchen HOD</label>
                 <input type="text" placeholder="Nama">
